--- a/styles/globals.css
+++ b/styles/globals.css
@@ -44,7 +44,7 @@ img {
 }
 
 .mainImage {
-  background: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('/public/main.jpg');
+  background: linear-gradient(to bottom, rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url('/main.jpg');
   background-position: top center;
   background-attachment: fixed;
   background-size: cover;
