--- a/components/Photos/PhotosList.module.scss
+++ b/components/Photos/PhotosList.module.scss
@@ -12,6 +12,8 @@
     }
 
     img {
+        width: 100%;
+        height: auto;
         object-fit: cover;
         transform: skew(-5deg) scale(1.1);
         &:hover {
@@ -32,14 +34,17 @@
         justify-content: center;
         align-items: center;
 
-    div {
-        width: 60vw;
-        height: 80vh;
-        animation: anim2 0.3s ease-in-out forwards;
-    }
+    // div {
+    //     width: 60vw;
+    //     height: 80vh;
+    //     animation: anim2 0.3s ease-in-out forwards;
+    // }
 
     img {
         object-fit: contain;
+        width: 60vw!important;
+        height: 80vh!important;
+        animation: anim2 0.3s ease-in-out forwards;
         
         
     }
@@ -56,31 +61,20 @@
 
 
 
-@media (max-width: 870px) {
+@media (max-width: 687px) {
     .photos-list {
         grid-template-columns: repeat(2, 1fr);
         margin-top:100px;
+        gap: 2rem;
 
-        img {
-            width: 300px;
-            height: auto;
-        }
+        // img {
+        //     width: 300px;
+        //     height: auto;
+        // }
     }
 
 }
 
 
-@media (max-width: 670px) {
-    .photos-list {
-        grid-template-columns: 1fr;
-        margin-top:100px;
-        text-align: center;
 
-        img {
-            width: 300px;
-            height: auto;
-        }
-    }
-
-}
 
