--- a/components/News/NewsItem.module.scss
+++ b/components/News/NewsItem.module.scss
@@ -9,7 +9,8 @@
     }
 
     img {
-        width: 200px;
+        width: 100%;
+        height: 100%;
         cursor: pointer;
         transition: all 0.3s ease-out;
         // transform-style: preserve-3d;
