--- a/components/News/NewsDetails.module.scss
+++ b/components/News/NewsDetails.module.scss
@@ -15,6 +15,7 @@
 
     .image-wrapper {
         margin-top: 50px;
+        overflow: hidden;
     }
 
 
@@ -25,9 +26,9 @@
         cursor: pointer;
         transition: transform 0.3s ease-out;
         
-        &:hover {
-            transform: scale(1.1);
-        }
+        // &:hover {
+        //     transform: scale(1.1);
+        // }
     }
 }
 
