--- a/components/News/NewsItem.module.scss
+++ b/components/News/NewsItem.module.scss
@@ -10,7 +10,7 @@
 
     img {
         width: 100%;
-        height: 100%;
+        // height: auto;
         cursor: pointer;
         transition: all 0.3s ease-out;
         // transform-style: preserve-3d;
