--- a/components/Photos/PhotosList.module.scss
+++ b/components/Photos/PhotosList.module.scss
@@ -12,6 +12,7 @@
     }
 
     img {
+        box-shadow: 0px 0px 8px rgb(255,255,255);
         width: 100%;
         height: auto;
         object-fit: cover;
@@ -66,6 +67,7 @@
         grid-template-columns: repeat(2, 1fr);
         margin-top:100px;
         gap: 2rem;
+
 
         // img {
         //     width: 300px;
