--- a/components/Photos/PhotosList.module.scss
+++ b/components/Photos/PhotosList.module.scss
@@ -12,14 +12,15 @@
     }
 
     img {
-        box-shadow: 0px 0px 8px rgb(255,255,255);
         width: 100%;
         height: auto;
         object-fit: cover;
         transform: skew(-5deg) scale(1.1);
-        &:hover {
-            cursor: pointer;
-        }
+        // transition: all 0.3s;
+        // &:hover {
+        //     cursor: pointer;
+        //     transform: scale(1.1) rotateY(3deg);
+        // }
     }
 }
 
@@ -76,6 +77,22 @@
     }
 
 }
+
+@media (min-width: 768px) {
+    .photos-list {
+
+
+        img {
+            transition: all 0.3s;
+            &:hover {
+                cursor: pointer;
+                transform: scale(1.1) rotateY(3deg);
+            }
+        }
+    }
+}
+
+
 
 
 
