--- a/components/Layout/Backdrop.module.scss
+++ b/components/Layout/Backdrop.module.scss
@@ -1,8 +1,8 @@
 .backdrop {
     background: rgba(0,0,0,0.95);
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    // display: flex;
+    // align-items: center;
+    // justify-content: center;
     position: fixed;
     z-index:100;
     top: 0;
