--- a/styles/globals.css
+++ b/styles/globals.css
@@ -38,8 +38,8 @@ img {
 }
 
 .container {
-    width: 90%;
-    max-width: 1200px;
+    width: 1200px;
+    max-width: 90%;
     margin: 0 auto;
 }
 
