--- a/components/Photos/PhotosList.module.scss
+++ b/components/Photos/PhotosList.module.scss
@@ -1,14 +1,11 @@
 .photos-list {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 3rem;
-    max-width: 960px;
+    gap: 6rem;
     margin: 130px auto 100px;
 
     div {
         transform: skew(-5deg);
-        
-
     }
 
     img {
@@ -16,39 +13,22 @@
         height: auto;
         object-fit: cover;
         transform: skew(-5deg) scale(1.1);
-        // transition: all 0.3s;
-        // &:hover {
-        //     cursor: pointer;
-        //     transform: scale(1.1) rotateY(3deg);
-        // }
+        cursor: pointer;
     }
 }
 
 
 .modal {
-        position: fixed;
-        top:40px;
-        left:40px;
-        right:40px;
-        bottom:40px;
-        z-index: 300;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-    // div {
-    //     width: 60vw;
-    //     height: 80vh;
-    //     animation: anim2 0.3s ease-in-out forwards;
-    // }
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 600px;
+        max-width: 90%;
+        overflow: hidden;
 
     img {
-        object-fit: contain;
-        width: 60vw!important;
-        height: 80vh!important;
-        animation: anim2 0.3s ease-in-out forwards;
-        
-        
+        object-fit: contain;       
     }
 }
 
