--- a/components/Photos/PhotosList.module.scss
+++ b/components/Photos/PhotosList.module.scss
@@ -26,6 +26,7 @@
         width: 600px;
         max-width: 90%;
         overflow: hidden;
+        opacity: 1!important;
 
     img {
         object-fit: contain;       
