added some styles to buttons

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,6 +50,10 @@ img {
   background-size: cover;
 } 
 
+button:active {
+  transform: scale(0.98);
+}
+
 @media (max-width: 587px) {
   .mainImage {
     background: #000;
